tests/snapshots/generate_plan_tests__clojure_jdk_latest.snap
---
source: tests/generate_plan_tests.rs
expression: plan
---
{
  "providers": [],
  "buildImage": "[build_image]",
  "variables": {
    "NIXPACKS_METADATA": "clojure"
  },
  "phases": {
    "build": {
      "name": "build",
      "dependsOn": [
        "install",
        "setup"
      ],
      "cmds": [
        "lein uberjar; if [ -f /app/target/default+uberjar/*standalone.jar ]; then mv /app/target/default+uberjar/*standalone.jar /app/target/*standalone.jar; fi"
      ]
    },
    "setup": {
      "name": "setup",
      "nixPkgs": [
        "leiningen",
        "jdk"
      ],
      "nixOverlays": [],
      "nixpkgsArchive": "[archive]"
    }
  },
  "start": {
    "cmd": "bash -c \"java $JAVA_OPTS -jar /app/target/uberjar/*-standalone.jar\""
  }
}
