tests/snapshots/generate_plan_tests__elixir_ecto.snap
---
source: tests/generate_plan_tests.rs
expression: plan
---
{
  "providers": [],
  "buildImage": "[build_image]",
  "variables": {
    "LANG": "en_US.UTF-8",
    "MIX_ENV": "prod",
    "NIXPACKS_METADATA": "elixir"
  },
  "phases": {
    "build": {
      "name": "build",
      "dependsOn": [
        "install"
      ],
      "cmds": [
        "mix compile",
        "mix ecto.migrate",
        "mix run priv/repo/seeds.exs"
      ]
    },
    "install": {
      "name": "install",
      "dependsOn": [
        "setup"
      ],
      "cmds": [
        "mix local.hex --force",
        "mix local.rebar --force",
        "mix deps.get --only prod"
      ]
    },
    "setup": {
      "name": "setup",
      "nixPkgs": [
        "elixir"
      ],
      "nixOverlays": [],
      "nixpkgsArchive": "[archive]"
    }
  },
  "start": {
    "cmd": "mix phx.server"
  }
}
